# snake_os

./: .gitignore  Cargo.toml  Makefile  README.md
src/: food.rs  game.rs  main.rs  snake.rs  timer.rs
