[package]
name = "snake_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
uefi-services = "0.17.0"

[dependencies.uefi]
version = "0.20.0"
features = ["alloc"]
